// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog buttons Invoking dialog button actions should render multiple actions 1`] = `
<DialogButtons__StyledButtonGroup>
  <DialogButtons__ActionButton
    autoFocus={true}
    onClick={[Function]}
    primary={true}
  >
    Primary action
  </DialogButtons__ActionButton>
  <DialogButtons__ActionButton
    onClick={[Function]}
    secondary={true}
  >
    Secondary Action
  </DialogButtons__ActionButton>
  <DialogButtons__ActionButton
    onClick={[Function]}
    tertiary={true}
  >
    Tertiary Action
  </DialogButtons__ActionButton>
</DialogButtons__StyledButtonGroup>
`;

exports[`Dialog buttons should render the dialog buttons 1`] = `
<DialogButtons__StyledButtonGroup>
  <DialogButtons__ActionButton
    autoFocus={true}
    onClick={[Function]}
    primary={true}
  >
    Primary action
  </DialogButtons__ActionButton>
</DialogButtons__StyledButtonGroup>
`;
